--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pandas==1.3.5
-numpy==1.21.6
-streamlit==1.11.0
-regex==2021.11.10
-matplotlib==3.5.2
+streamlit
+matplotlib
+seaborn
+urlextract
+wordcloud
+pandas
+emoji
